--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link rel="icon" href="/images/non.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Non Thaninpong</title>
+    <!-- <meta
+      name="Description"
+      content="Brookreator is a free-to-use online AI photo creator with Stable Diffusion. By entering text prompts or  keywords, AI will help you convert your words into incredible dream artwork in seconds which have free design media and templates, user-friendly interface, and ton of styles and filters to experiment with.  You can also use it to create photos, artwork, social media posts, presentations, memes, cartoon posters, logos, websites, blogs, stickers, and designs and much more."
+    /> -->
+    <meta
+      name="KeyWords"
+      content="Thaninpong, Non Thaninpong, Thaninpong non, Thaninpong Non, Thaninpong Panthawong, Thaninpong.info, thaninpong info"
+    />
+    <!-- <meta property="og:image" content="http://brookreator.ai/social.jpg" />
+    <link rel="stylesheet" type="text/css" href="/loader.css" /> -->
+    <meta
+      name="google-site-verification"
+      content="i6Ve7iqgn1E5CvlaRP6gBif3P9GEDLV49VUCn9emr64"
+    />
   </head>
   <body>
     <div id="app"></div>
-    <script type="importmap">
-      { "imports": {
-          "vue":               "https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.41/vue.esm-browser.prod.js",
-          "vue-router":        "https://cdnjs.cloudflare.com/ajax/libs/vue-router/4.1.5/vue-router.esm-browser.min.js",
-          "@vue/devtools-api": "https://unpkg.com/@vue/devtools-api@6.4.5/lib/esm/index.js"
-      } }
-    </script>
     <script type="module" src="/src/main.js"></script>
     <script type="module">
       import { createRouter, createWebHistory } from 'vue-router'
